# dataspecs

./: .buildinfo  CITATION.cff  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: dataspecs.api.doctree  dataspecs.core.api.doctree  dataspecs.core.doctree  dataspecs.core.specs.doctree  dataspecs.core.typing.doctree  dataspecs.doctree  dataspecs.extras.doctree  dataspecs.extras.formatting.doctree  dataspecs.extras.replacing.doctree  dataspecs.specs.doctree  dataspecs.typing.doctree
.github/workflows/: docs.yaml  gh-pages.yaml  pypi.yaml  tests.yaml
_apidoc/: dataspecs.api.html  dataspecs.core.api.html  dataspecs.core.html  dataspecs.core.specs.html  dataspecs.core.typing.html  dataspecs.extras.formatting.html  dataspecs.extras.html  dataspecs.extras.replacing.html  dataspecs.html  dataspecs.specs.html  dataspecs.typing.html
_modules/: index.html
_modules/dataspecs/: api.html  specs.html  typing.html
_sources/: index.md.txt
_sources/_apidoc/: dataspecs.api.rst.txt  dataspecs.core.api.rst.txt  dataspecs.core.rst.txt  dataspecs.extras.rst.txt  dataspecs.rst.txt  dataspecs.specs.rst.txt  dataspecs.typing.rst.txt
dataspecs/: __init__.py  api.py  core.py  specs.py  typing.py
dataspecs/core/: __init__.py  api.py  spec.py  specs.py  typing.py
dataspecs/extras/: __init__.py  formatting.py  naming.py  replacement.py  replacing.py
docs/: build  conf.py
tests/: test_api.py  test_core.py  test_core_api.py  test_core_spec.py  test_core_specs.py  test_core_typing.py  test_extras_formatting.py  test_extras_naming.py  test_extras_replacement.py  test_extras_replacing.py  test_specs.py  test_typing.py
v2.0.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v2.0.0/.doctrees/: environment.pickle  index.doctree
v2.0.0/_apidoc/: dataspecs.core.api.html  dataspecs.core.html  dataspecs.core.specs.html  dataspecs.core.typing.html  dataspecs.extras.formatting.html  dataspecs.extras.html  dataspecs.extras.replacing.html  dataspecs.html
v2.0.0/_modules/: index.html
v2.0.1/: genindex.html  index.html  objects.inv  py-modindex.html
v2.0.1/.doctrees/: environment.pickle
v2.0.1/_apidoc/: dataspecs.core.api.html  dataspecs.core.specs.html  dataspecs.core.typing.html  dataspecs.extras.formatting.html  dataspecs.extras.replacing.html  dataspecs.html
v3.0.0/: .buildinfo  index.html  search.html  searchindex.js
v3.0.0/.doctrees/: environment.pickle  index.doctree
v3.0.0/_apidoc/: dataspecs.core.api.html  dataspecs.core.html  dataspecs.core.specs.html  dataspecs.extras.html  dataspecs.extras.replacing.html  dataspecs.html
v3.0.1/: genindex.html  index.html  objects.inv  searchindex.js
v3.0.1/.doctrees/: environment.pickle  index.doctree
v3.0.1/_apidoc/: dataspecs.core.api.html  dataspecs.core.specs.html  dataspecs.html  (+1 more)
v4.0.0/: genindex.html  index.html  objects.inv  searchindex.js
v5.0.0/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
(+88 files in other folders)
