[project]
name = "dataspecs"
version = "1.0.2"
description = "Data specifications by data classes"
readme = "README.md"
keywords = ["dataclasses", "specifications", "typing"]
requires-python = ">=3.9,<3.14"
dependencies = ["typing-extensions>=4.1,<5.0"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://astropenguin.github.io/dataspecs/v1.0.2"
repository = "https://github.com/astropenguin/dataspecs"

[dependency-groups]
dev = [
    "black>=24.8",
    "ipython>=8.18",
    "myst-parser>=3.0",
    "pydata-sphinx-theme>=0.16",
    "pyright>=1.1",
    "pytest>=8.3",
    "sphinx>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "warning"
